# hr-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
ansible/: Dockerfile  Makefile  README.md  playbook.yml
ansible/templates/: docker-compose.yml.j2  nginx.conf.j2
ansible/vars/: config.yml
file-storage/: Dockerfile  Makefile  alembic.ini  docker-compose.yml  docker-compose_nats.yml  docker.yaml  entrypoint.sh  local.yaml  pyproject.toml
file-storage/src/file_storage/application/interfaces/usecase/: file.py
file-storage/src/file_storage/application/models/: file.py  result.py
file-storage/src/file_storage/application/usecase/: create.py  delete.py  get_file.py  get_info.py  list_files.py  save.py  save_result.py
file-storage/src/file_storage/domain/exceptions/: file.py
file-storage/src/file_storage/domain/models/: adaptix.py  file.py  result.py
file-storage/src/file_storage/domain/mongo_filter/: base.py  model.py  paginator.py
file-storage/src/file_storage/domain/repositories/: file.py  file_storage.py  js.py
file-storage/src/file_storage/infrastructure/object_store/: file.py
file-storage/src/file_storage/infrastructure/sqlalchemy/: base.py
file-storage/src/file_storage/infrastructure/sqlalchemy/migrations/: env.py  script.py.mako
file-storage/src/file_storage/infrastructure/sqlalchemy/migrations/versions/: 2025_05_03_0132-bc32f13b31e3_init.py  2025_05_06_1839-b3beac450923_add_folders.py  2025_05_06_2257-199c22bc09c3_add_folders_description.py  2025_05_09_1553-876071a3c1ed_add_name_and_unique_path.py  2025_05_11_2334-4b6641fe6104_folder_name_unique.py  2025_05_12_2232-f84c5c673cde_add_schema_to_files.py  2025_05_13_0102-a1f6907cdeb5_add_size_to_results.py  2025_05_16_2032-29b866eaa4ea_add_result_type_format.py  2025_05_17_2154-2841569ee85a_drop_path_unique_results.py
file-storage/src/file_storage/infrastructure/sqlalchemy/models/: files.py  folders.py  results.py
file-storage/src/file_storage/infrastructure/sqlalchemy/repositories/: file.py
file-storage/src/file_storage/main/: config.py
file-storage/src/file_storage/main/di/: app.py  infrastructure.py
file-storage/src/file_storage/main/fastapi/: factory.py  run.py
file-storage/src/file_storage/presentation/broker/models/: result.py
file-storage/src/file_storage/presentation/broker/routes/: result.py
file-storage/src/file_storage/presentation/fastapi/: response_model.py  router.py
file-storage/src/file_storage/presentation/fastapi/routes/: files.py  results.py
file-storage/src/file_storage/presentation/fastapi/schemas/: file.py
file-storage/src/file_storage/presentation/filters/: model.py  results.py
front/: Dockerfile  Makefile  docker-compose.yml  docker.yaml  entrypoint.sh  pyproject.toml
front/src/front/domain/exceptions/: core.py
front/src/front/domain/models/: file.py
front/src/front/domain/types/: clients.py  file.py
front/src/front/infrastructure/repositories/: files.py
front/src/front/main/: config.py
front/src/front/main/di/: factory.py
front/src/front/main/di/providers/: app.py  client.py  repository.py
front/src/front/main/fastapi/: factory.py  run.py
front/src/front/presentation/broker/: manager.py  socket.py
front/src/front/presentation/fastapi/: router.py
front/src/front/presentation/fastapi/filters/: filter.py  types.py
front/src/front/presentation/fastapi/routes/: common.py  files.py  jinja.py  results.py
front/src/front/utils/: client.py  fastapi.py  load_yaml_config.py  logging.py
front/src/templates/common/dashboard/: dashboard.html  folder_dashboard.html
front/src/templates/common/files/: file.html  folder.html  folders.html
front/src/templates/common/index/: page.html
resume_service/: Dockerfile_service  Dockerfile_worker  Makefile  docker-compose.yaml  docker.yaml  entrypoint_service.sh  entrypoint_worker.sh  pyproject.toml
resume_service/src/resume_service/app/interfaces/: inference.py
resume_service/src/resume_service/di/: factory.py
resume_service/src/resume_service/di/providers/: app.py  client.py  message_broker.py  service.py  task_broker.py  worker.py
resume_service/src/resume_service/domain/exceptions/: convert.py  files.py  format.py
resume_service/src/resume_service/domain/models/: message.py  result.py  resume_info.py  status.py  worker.py
resume_service/src/resume_service/domain/services/: convert.py  inference.py  js.py
resume_service/src/resume_service/domain/types/: clients.py
resume_service/src/resume_service/infrastructure/: context.py
resume_service/src/resume_service/infrastructure/adapters/: file.py  llm.py  task.py
resume_service/src/resume_service/main/: config.py
resume_service/src/resume_service/main/api/: factory.py  run.py
resume_service/src/resume_service/main/worker/: worker.py
resume_service/src/resume_service/presentation/api/: router.py
resume_service/src/resume_service/presentation/api/models/: create.py
resume_service/src/resume_service/presentation/api/routes/: task.py
resume_service/src/resume_service/presentation/broker/models/: file.py
resume_service/src/resume_service/presentation/broker/routes/: pipeline.py
resume_service/src/resume_service/presentation/worker/: middleware.py  tasks.py  worker_setup.py
resume_service/src/resume_service/utils/: client.py  fastapi.py  load_yaml_config.py  logging.py  prompt.py
